--- a/ValidationData/mydata/analysis_mydata_variants_old.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_old.ipynb
@@ -9,15 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_17384/1318617963.py:8: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "INFO: Pandarallel will run on 8 workers.\n",
-      "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
+      "INFO: Pandarallel will use Memory file system to transfer data between the main process and workers.\n"
      ]
     }
    ],
@@ -57,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,8 +128,8 @@
     "    return result\n",
     "\n",
     "## loading original file and setting output base path\n",
-    "# mydata = './original.snpeff.state.disease.tsv'\n",
-    "mydata = './original.snpeff.state.disease.filtered.tsv'\n",
+    "mydata = './original.snpeff.state.disease.tsv'\n",
+    "# mydata = './original.snpeff.state.disease.filtered.tsv'\n",
     "results_splai = './results_spliceai_mydata.vcf'\n",
     "\n",
     "### Loading files as pandas DataFrame ###\n",
@@ -128,40 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start extract_snv\n",
-      "Filtering : 22016 --> 19408\n",
-      "\n",
-      "Start exclude_intergenic\n",
-      "Filtering : 19408 --> 19408\n",
-      "\n",
-      "Start exclude_utr\n",
-      "Filtering : 19408 --> 19408\n",
-      "\n",
-      "Start exclude_no_transcripts\n",
-      "Filtering : 19408 --> 19408\n",
-      "\n",
-      "Start exclude_up_down_stream\n",
-      "Filtering : 19408 --> 19408\n",
-      "\n",
-      "Start exclude_tf_binding\n",
-      "Filtering : 19408 --> 19408\n",
-      "\n",
-      "Start extract_denovo\n",
-      "Filtering : 19408 --> 18721\n",
-      "\n",
-      "Merged: 18758\n",
-      "Drop duplicated: 16945 \n",
+      "Merged: 22057\n",
+      "Drop duplicated: 19926 \n",
       "\n",
       "Start remove_unkown_refalt\n",
-      "Filtering : 16945 --> 16945\n",
-      "\n"
+      "Filtering : 19926 --> 19926\n",
+      "\n",
+      "\n",
+      "Annotating SpliceAI results...\n"
      ]
     }
    ],
@@ -171,17 +166,6 @@
     "df = preprocess.rename_like_vcf_format(df)\n",
     "df['variant_id'] = df.apply(preprocess.generate_variant_id_col, axis=1)\n",
     "df.rename(columns={'GeneSymbol': 'gene'}, inplace=True)\n",
-    "\n",
-    "## Extract coding SNVs\n",
-    "df = variantfilter.extract_snv(df, key='type')\n",
-    "df = variantfilter.exclude_intergenic(df, key='ENST')\n",
-    "df = variantfilter.exclude_utr(df, key='ENST')\n",
-    "df = variantfilter.exclude_no_transcripts(df, key='ENST')\n",
-    "df = variantfilter.exclude_up_down_stream(df, key='ENST')\n",
-    "df = variantfilter.exclude_tf_binding(df, key='ENST')\n",
-    "\n",
-    "## DeNovo filter (extract estimated denovo variants)\n",
-    "df = variantfilter.extract_denovo(df)\n",
     "\n",
     "### Mapping ENST full ID like ENST000000000000.0_0 ###\n",
     "# Mearge ENST Full ID\n",
@@ -202,12 +186,67 @@
     "df = remove_unkown_refalt(df)\n",
     "df.rename(columns={'POS_hg19': 'POS', 'csq_snpeff': 'csq'}, inplace=True)\n",
     "df['variant_id'] = df.parallel_apply(preprocess.generate_variant_id_col, axis=1)\n",
-    "splai['ID'] = splai.parallel_apply(preprocess.generate_variant_id_col, axis=1)"
+    "splai['ID'] = splai.parallel_apply(preprocess.generate_variant_id_col, axis=1)\n",
+    "\n",
+    "#4.   Annotate SpliceAI results\n",
+    "print('\\nAnnotating SpliceAI results...')\n",
+    "#4-1. Annotate results\n",
+    "df = anno_spliceai.anno(df, splai, 'gene')\n",
+    "#4-2. Calcurate Max delata score\n",
+    "df = anno_spliceai.insert_maxsplai(df)\n",
+    "#4-3. Exclude variant Non SpliceAI prediction\n",
+    "df = df.loc[~df['maxsplai'].isnull(),:] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start extract_snv\n",
+      "Filtering : 18152 --> 18152\n",
+      "\n",
+      "Start exclude_intergenic\n",
+      "Filtering : 18152 --> 18152\n",
+      "\n",
+      "Start exclude_utr\n",
+      "Filtering : 18152 --> 17522\n",
+      "\n",
+      "Start exclude_no_transcripts\n",
+      "Filtering : 17522 --> 17522\n",
+      "\n",
+      "Start exclude_up_down_stream\n",
+      "Filtering : 17522 --> 16954\n",
+      "\n",
+      "Start exclude_tf_binding\n",
+      "Filtering : 16954 --> 16954\n",
+      "\n",
+      "Start extract_denovo\n",
+      "Filtering : 16954 --> 16353\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Extract coding SNVs\n",
+    "df = variantfilter.extract_snv(df, key='type')\n",
+    "df = variantfilter.exclude_intergenic(df, key='csq')\n",
+    "df = variantfilter.exclude_utr(df, key='csq')\n",
+    "df = variantfilter.exclude_no_transcripts(df, key='csq')\n",
+    "df = variantfilter.exclude_up_down_stream(df, key='csq')\n",
+    "df = variantfilter.exclude_tf_binding(df, key='csq')\n",
+    "\n",
+    "## DeNovo filter (extract estimated denovo variants)\n",
+    "df = variantfilter.extract_denovo(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
