--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,23 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2012/3260020585.py:8: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -81,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,103 +137,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/04 06:07:27 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
-      "-2: 63\n",
-      "-1: 60\n",
-      "+1: 80\n",
-      "+2: 45\n",
-      "Total variants      : 16708\n",
-      "Canonical variants  : 248\n",
-      "non-Canon variants  : 16460\n",
+      "2024/02/05 02:34:40 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
+      "-2: 43\n",
+      "-1: 48\n",
+      "+1: 82\n",
+      "+2: 46\n",
+      "Total variants      : 16353\n",
+      "Canonical variants  : 219\n",
+      "non-Canon variants  : 16134\n",
       "\n",
-      "2024/02/04 06:07:27 [INFO   ] (__main__) - Calculating exonic positions...\n"
+      "2024/02/05 02:34:40 [INFO   ] (__main__) - Calculating exonic positions...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16708/16708 [00:09<00:00, 1725.25it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/02/04 06:07:37 [INFO   ] (__main__) - Annotating splicing information...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 16708/16708 [00:21<00:00, 767.83it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/02/04 06:07:59 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "100%|██████████| 16708/16708 [00:00<00:00, 22859.43it/s]\n",
-      "100%|██████████| 16708/16708 [00:00<00:00, 19061.82it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/02/04 06:08:01 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "100%|██████████| 16708/16708 [00:23<00:00, 721.96it/s]\n",
-      "100%|██████████| 16708/16708 [00:03<00:00, 5549.41it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024/02/04 06:08:37 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
-      "2024/02/04 06:08:39 [INFO   ] (__main__) - Predicting CDS change...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 16708/16708 [00:11<00:00, 1423.17it/s]\n",
-      "100%|██████████| 16708/16708 [00:00<00:00, 100464.39it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: CDS_Length == 0 in 22:21348896-G-T\n",
-      "Warning: CDS_Length == 0 in 6:167796311-G-T\n",
-      "Warning: CDS_Length == 0 in 7:149481954-G-A\n",
-      "2024/02/04 06:08:54 [INFO   ] (__main__) - Annotating CCRs info...\n",
-      "2024/02/04 06:08:55 [INFO   ] (__main__) - Annotate CCR score\n"
+      "100%|██████████| 16353/16353 [00:09<00:00, 1711.51it/s]\n"
      ]
     }
    ],
@@ -270,6 +183,7 @@
     "\n",
     "#2-2. Select minimum distance from upstream distance and downstream distance\n",
     "df['exon_pos'] = df.parallel_apply(posparser.select_exon_pos, axis=1)\n",
+    "\n",
     "\n",
     "#2-3. Decision exonic splice sites (1 nt in acceptor site or 3 nts on Donor site)\n",
     "df['exon_splice_site'] = df.parallel_apply(posparser.extract_splicing_region, axis=1)\n",
@@ -298,6 +212,7 @@
     "TH_min_sAGDG, TH_max_sAGDG = 0.01, 0.05\n",
     "TH_min_GExon, TH_max_GExon = 25, 500\n",
     "TH_sAG, TH_sDG = 0.2, 0.2\n",
+    "\n",
     "\n",
     "#6-1. Annotate Exon/Intron position information\n",
     "df['ExInt_INFO'] = df.progress_apply(splaiparser.calc_exint_info, \n",
@@ -383,7 +298,6 @@
     "#8-2. Determine if the gene is included in eLoFs genes\n",
     "df['is_eLoF'] = df.parallel_apply(predeffect.elofs_judge, axis=1)\n",
     "\n",
-    "\n",
     "#8-3. Determine causing NMD or not\n",
     "df['is_NMD_at_Canon'] = df.parallel_apply(predeffect.nmd_judge, axis=1)\n",
     "\n",
@@ -419,24 +333,37 @@
     "\n",
     "#9-2. Intersect with CCRs\n",
     "logger.info('Annotate CCR score')\n",
-    "df = predeffect.anno_ccr_score(df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = predeffect.anno_ccr_score(df)\n",
+    "\n",
     "df.to_pickle('mydata.tmp.pkl')\n",
     "df = pd.read_pickle('mydata.tmp.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/02/05 02:37:33 [INFO   ] (__main__) - Annotating Screening scores...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2012/1483227897.py:5: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  df['insilico_screening'] = df.parallel_apply(scoring.insilico_screening, axis=1)\n",
+      "/tmp/ipykernel_2012/1483227897.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  df['clinvar_screening'] = df.parallel_apply(scoring.clinvar_screening, axis=1)\n",
+      "/work/Github/dev/ValidationData/mydata/../../libs/scoring.py:72: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  df['FinalScore'] = df['insilico_screening'] + df['clinvar_screening']\n"
+     ]
+    }
+   ],
    "source": [
     "#10.   Annotate ACMG/AMP codes\n",
     "from libs import scoring\n",
@@ -449,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
