--- a/ValidationData/AUC/roc.ipynb
+++ b/ValidationData/AUC/roc.ipynb
@@ -21,6 +21,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! conda update -n base -c conda-forge conda -y"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
    "outputs": [],
