--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 8 workers.\n",
-      "INFO: Pandarallel will use Memory file system to transfer data between the main process and workers.\n"
+      "INFO: Pandarallel will run on 23 workers.\n",
+      "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
    ],
@@ -30,10 +30,7 @@
     "import gffutils\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pybedtools import BedTool\n",
     "import pysam\n",
-    "from Bio.Seq import Seq\n",
-    "# from liftover import get_lifter\n",
     "from pandarallel import pandarallel\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -61,25 +58,27 @@
     "\n",
     "\n",
     "########   Initialize and setup pandas methods   ########\n",
-    "pandarallel.initialize(progress_bar=False)\n",
+    "pandarallel.initialize(nb_workers=os.cpu_count()-1, progress_bar=False, \n",
+    "                       verbose=2, use_memory_fs=False) \n",
+    "os.environ['JOBLIB_TEMP_FOLDER'] = '/tmp' \n",
     "tqdm.pandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "########   Import genocode DBs (exon DB and intron DB)   ########\n",
     "try:\n",
-    "    db_anno_gencode = '../../Resources/05_GENCODE_v43lift37/gencode.v43lift37.annotation.gtf.db'\n",
-    "    db_anno_intron = '../../Resources/05_GENCODE_v43lift37/gencode.v43lift37.annotation.intron.gtf.db'\n",
+    "    db_anno_gencode = '../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.gtf.db'\n",
+    "    db_anno_intron = '../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db'\n",
     "    db = gffutils.FeatureDB(db_anno_gencode)\n",
     "    db_intron = gffutils.FeatureDB(db_anno_intron)\n",
     "except ValueError:\n",
-    "    db_anno_gencode = '/work/resources/DBs/gencode.v43lift37.annotation.gtf.db'\n",
-    "    db_anno_intron = '/work/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db'\n",
+    "    db_anno_gencode = '/resources/DBs/gencode.v43lift37.annotation.gtf.db'\n",
+    "    db_anno_intron = '/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db'\n",
     "    db = gffutils.FeatureDB(db_anno_gencode)\n",
     "    db_intron = gffutils.FeatureDB(db_anno_intron)\n",
     "\n",
@@ -137,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/05 02:34:40 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
+      "2024/02/08 02:17:57 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
       "-2: 43\n",
       "-1: 48\n",
       "+1: 82\n",
@@ -153,14 +152,107 @@
       "Canonical variants  : 219\n",
       "non-Canon variants  : 16134\n",
       "\n",
-      "2024/02/05 02:34:40 [INFO   ] (__main__) - Calculating exonic positions...\n"
+      "2024/02/08 02:17:57 [INFO   ] (__main__) - Calculating exonic positions...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16353/16353 [00:09<00:00, 1711.51it/s]\n"
+      "  0%|          | 0/16353 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16353/16353 [00:18<00:00, 894.49it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/02/08 02:18:17 [INFO   ] (__main__) - Annotating splicing information...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16353/16353 [00:20<00:00, 800.66it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/02/08 02:18:37 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 16353/16353 [00:01<00:00, 15870.87it/s]\n",
+      "100%|██████████| 16353/16353 [00:01<00:00, 12747.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/02/08 02:18:40 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100%|██████████| 16353/16353 [00:24<00:00, 669.83it/s]\n",
+      "100%|██████████| 16353/16353 [00:05<00:00, 3233.25it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/02/08 02:19:17 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
+      "2024/02/08 02:19:20 [INFO   ] (__main__) - Predicting CDS change...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 16353/16353 [00:17<00:00, 921.85it/s] \n",
+      "100%|██████████| 16353/16353 [00:00<00:00, 60842.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: CDS_Length == 0 in 22:21348896-G-T\n",
+      "Warning: CDS_Length == 0 in 6:167796311-G-T\n",
+      "Warning: CDS_Length == 0 in 7:149481954-G-A\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024/02/08 02:19:42 [INFO   ] (__main__) - Annotating CCRs info...\n",
+      "2024/02/08 02:19:43 [INFO   ] (__main__) - Annotate CCR score\n"
      ]
     }
    ],
@@ -341,25 +433,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_pickle('mydata_prescore.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/05 02:37:33 [INFO   ] (__main__) - Annotating Screening scores...\n"
+      "2024/02/08 02:20:42 [INFO   ] (__main__) - Annotating Screening scores...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2012/1483227897.py:5: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/tmp/ipykernel_255396/1483227897.py:5: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  df['insilico_screening'] = df.parallel_apply(scoring.insilico_screening, axis=1)\n",
-      "/tmp/ipykernel_2012/1483227897.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/tmp/ipykernel_255396/1483227897.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  df['clinvar_screening'] = df.parallel_apply(scoring.clinvar_screening, axis=1)\n",
-      "/work/Github/dev/ValidationData/mydata/../../libs/scoring.py:72: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/workspace/Github/dev/ValidationData/mydata/../../libs/scoring.py:76: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  df['FinalScore'] = df['insilico_screening'] + df['clinvar_screening']\n"
      ]
     }
@@ -376,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,14 +487,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2012/3159126122.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_255396/3159126122.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.fillna('.', inplace=True)\n"
      ]
     }
@@ -406,28 +507,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "FinalScore\n",
-       "1     9011\n",
-       "0     5132\n",
-       "3     1195\n",
-       "2      846\n",
-       "4      261\n",
-       "5      148\n",
-       "6       78\n",
-       "7       24\n",
-       "9        8\n",
-       "8        4\n",
+       "1     9257\n",
+       "0     4952\n",
+       "2      973\n",
+       "3      739\n",
+       "4      241\n",
+       "6       85\n",
+       "5       74\n",
+       "7       21\n",
+       "8        8\n",
+       "9        2\n",
        "10       1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,6 +536,46 @@
    "source": [
     "df['FinalScore'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_identified = df[df['State'] == 'Identified']\n",
+    "df_undetermined = df[df['State'] == 'Undetermined']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualizations\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_undetermined_patho = df_undetermined[df_undetermined['FinalScore'] >= 4]\n",
+    "df_undetermined_patho.to_csv(f'./undetermined_patho.tsv', sep='\\t', index=False, encoding='shift-jis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
