--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 23 workers.\n",
+      "INFO: Pandarallel will run on 3 workers.\n",
       "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
@@ -507,49 +507,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "FinalScore\n",
-       "1     9257\n",
-       "0     4952\n",
-       "2      973\n",
-       "3      739\n",
-       "4      241\n",
-       "6       85\n",
-       "5       74\n",
-       "7       21\n",
-       "8        8\n",
-       "9        2\n",
-       "10       1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['FinalScore'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "path_to_hgmd = '../../Resources/07_HGMD_GeneBasedInfo/HGMD_GeneBasedInfo_2023.4.tsv.gz'\n",
+    "\n",
+    "def anno_hgmd(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    hgmd = pd.read_table(path_to_hgmd, header=0, dtype=str)\n",
+    "    hgmd = hgmd[['gene', 'altsymbol', 'refseq', \n",
+    "                 'expected_inheritance', 'hgncID', 'omimid', 'DM']]\n",
+    "    hgmd = hgmd.astype({'DM': 'float64'})\n",
+    "    df = pd.merge(\n",
+    "        df, hgmd, left_on='Gene.refGene', right_on='gene', how='left'\n",
+    "        )\n",
+    "    df = df.drop(columns=['gene_y'])\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_pickle(f'./mydata.final.pickle')\n",
+    "df = anno_hgmd(df)\n",
+    "\n",
     "df_identified = df[df['State'] == 'Identified']\n",
     "df_undetermined = df[df['State'] == 'Undetermined']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,20 +563,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_undetermined_patho = df_undetermined[df_undetermined['FinalScore'] >= 4]\n",
-    "df_undetermined_patho.to_csv(f'./undetermined_patho.tsv', sep='\\t', index=False, encoding='shift-jis')"
+    "df_undetermined_patho.to_excel(f'./undetermined_patho.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_undetermined_vus = df_undetermined[df_undetermined['FinalScore'] == 3]\n",
+    "df_undetermined_vus.to_excel(f'./undetermined_vus.xlsx', index=False)"
+   ]
   },
   {
    "cell_type": "code",
