--- a/ValidationData/AUC/roc.ipynb
+++ b/ValidationData/AUC/roc.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m recall_score\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m f1_score\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -34,8 +46,9 @@
     "from pandarallel import pandarallel\n",
     "\n",
     "########   Initialize and setup pandas methods   ########\n",
+    "pandarallel.initialize(nb_workers=os.cpu_count()-1, progress_bar=False, \n",
+    "                       verbose=2, use_memory_fs=False) \n",
     "os.environ['JOBLIB_TEMP_FOLDER'] = '/tmp' \n",
-    "pandarallel.initialize(nb_workers=36, progress_bar=False, verbose=0, use_memory_fs=False) \n",
     "\n",
     "try: \n",
     "    __file__\n",
@@ -3794,7 +3807,7 @@
     "fig.update_layout(barmode='group')\n",
     "fig.update_xaxes(categoryorder='total ascending')\n",
     "fig.update_layout(width=800, height=600)\n",
-    "# fig.write_html(\"performance-metrics.html\")\n",
+    "fig.write_html(\"performance-metrics.html\")\n",
     "\n",
     "fig.update_xaxes(categoryorder='array', \n",
     "                 categoryarray=['FW_3', 'FW_4', 'SPL_0.2', 'SPL_0.5', 'SPL_0.8'])\n",
