--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/08 02:17:57 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
+      "2024/02/08 04:45:46 [INFO   ] (__main__) - Classify \"Canonical\" splice site or \"Non-canonical\" splice site...\n",
       "-2: 43\n",
       "-1: 48\n",
       "+1: 82\n",
@@ -152,42 +152,35 @@
       "Canonical variants  : 219\n",
       "non-Canon variants  : 16134\n",
       "\n",
-      "2024/02/08 02:17:57 [INFO   ] (__main__) - Calculating exonic positions...\n"
+      "2024/02/08 04:45:46 [INFO   ] (__main__) - Calculating exonic positions...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/16353 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 16353/16353 [00:18<00:00, 894.49it/s] \n"
+      "100%|██████████| 16353/16353 [00:16<00:00, 974.93it/s] \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/08 02:18:17 [INFO   ] (__main__) - Annotating splicing information...\n"
+      "2024/02/08 04:46:04 [INFO   ] (__main__) - Annotating splicing information...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16353/16353 [00:20<00:00, 800.66it/s] "
+      "100%|██████████| 16353/16353 [03:40<00:00, 74.26it/s] "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/08 02:18:37 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
+      "2024/02/08 04:49:44 [INFO   ] (__main__) - Annotating ClinVar varaints interpretations...\n"
      ]
     },
     {
@@ -195,15 +188,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 16353/16353 [00:01<00:00, 15870.87it/s]\n",
-      "100%|██████████| 16353/16353 [00:01<00:00, 12747.82it/s]"
+      "100%|██████████| 16353/16353 [00:00<00:00, 23636.08it/s]\n",
+      "100%|██████████| 16353/16353 [00:00<00:00, 18761.27it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/08 02:18:40 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
+      "2024/02/08 04:49:46 [INFO   ] (__main__) - Parsing SpliceAI results...\n"
      ]
     },
     {
@@ -211,24 +204,24 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "100%|██████████| 16353/16353 [00:24<00:00, 669.83it/s]\n",
-      "100%|██████████| 16353/16353 [00:05<00:00, 3233.25it/s]\n"
+      "100%|██████████| 16353/16353 [03:41<00:00, 73.76it/s] \n",
+      "100%|██████████| 16353/16353 [00:03<00:00, 4791.52it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/08 02:19:17 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
-      "2024/02/08 02:19:20 [INFO   ] (__main__) - Predicting CDS change...\n"
+      "2024/02/08 04:53:48 [INFO   ] (__main__) - Annotating aberrant splicing size (bp)...\n",
+      "2024/02/08 04:53:52 [INFO   ] (__main__) - Predicting CDS change...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16353/16353 [00:17<00:00, 921.85it/s] \n",
-      "100%|██████████| 16353/16353 [00:00<00:00, 60842.50it/s]"
+      "100%|██████████| 16353/16353 [02:38<00:00, 103.26it/s]\n",
+      "100%|██████████| 16353/16353 [00:00<00:00, 91797.64it/s]"
      ]
     },
     {
@@ -251,8 +244,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/08 02:19:42 [INFO   ] (__main__) - Annotating CCRs info...\n",
-      "2024/02/08 02:19:43 [INFO   ] (__main__) - Annotate CCR score\n"
+      "2024/02/08 04:56:39 [INFO   ] (__main__) - Annotating CCRs info...\n",
+      "2024/02/08 04:56:40 [INFO   ] (__main__) - Annotate CCR score\n",
+      "Downloading with curl: https://s3.us-east-2.amazonaws.com/ccrs/ccrs/ccrs.autosomes.v2.20180420.bed.gz\n",
+      "Downloading with curl: https://s3.us-east-2.amazonaws.com/ccrs/ccrs/ccrs.xchrom.v2.20180420.bed.gz\n"
      ]
     }
    ],
@@ -433,40 +428,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Don't touch the original data ###\n",
+    "### Save the result as pickle file before scoring ###\n",
     "df.to_pickle('mydata_prescore.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024/02/08 02:20:42 [INFO   ] (__main__) - Annotating Screening scores...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_255396/1483227897.py:5: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  df['insilico_screening'] = df.parallel_apply(scoring.insilico_screening, axis=1)\n",
-      "/tmp/ipykernel_255396/1483227897.py:6: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  df['clinvar_screening'] = df.parallel_apply(scoring.clinvar_screening, axis=1)\n",
-      "/workspace/Github/dev/ValidationData/mydata/../../libs/scoring.py:76: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  df['FinalScore'] = df['insilico_screening'] + df['clinvar_screening']\n"
+      "2024/02/08 05:02:37 [INFO   ] (__main__) - Annotating Screening scores...\n"
      ]
     }
    ],
    "source": [
-    "#10.   Annotate ACMG/AMP codes\n",
+    "#10.   Scoring\n",
+    "df = pd.read_pickle('mydata_prescore.pkl')\n",
     "from libs import scoring\n",
     "logger.info('Annotating Screening scores...')\n",
     "df = df.astype({'maxsplai': 'float'})\n",
@@ -477,46 +463,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_pickle(f'./mydata.final.pickle')\n",
-    "df = pd.read_pickle(f'./mydata.final.pickle')"
+    "df.to_pickle(f'./mydata.final.pickle')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_255396/3159126122.py:2: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  df.fillna('.', inplace=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.replace({'\\u2161': 'II', '\\u2163': 'IV', '\\u2162': 'III'}, inplace=True, regex=True)\n",
-    "df.fillna('.', inplace=True)\n",
-    "df.to_csv(f'./mydata.final.tsv', sep='\\t', index=False, encoding='shift-jis')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['FinalScore'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,22 +486,53 @@
     "    df = pd.merge(\n",
     "        df, hgmd, left_on='Gene.refGene', right_on='gene', how='left'\n",
     "        )\n",
-    "    df = df.drop(columns=['gene_y'])\n",
     "\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_22280/1228360266.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  df.fillna('.', inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_pickle(f'./mydata.final.pickle')\n",
+    "df.replace({'\\u2161': 'II', '\\u2163': 'IV', '\\u2162': 'III'}, inplace=True, regex=True)\n",
+    "df.fillna('.', inplace=True)\n",
+    "df.to_csv(f'./mydata.final.tsv', sep='\\t', index=False, encoding='shift-jis')\n",
     "df = anno_hgmd(df)\n",
     "\n",
     "df_identified = df[df['State'] == 'Identified']\n",
     "df_undetermined = df[df['State'] == 'Undetermined']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_undetermined_patho = df_undetermined[df_undetermined['FinalScore'] >= 4]\n",
+    "df_undetermined_patho.to_excel(f'./undetermined_patho.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_undetermined_vus = df_undetermined[df_undetermined['FinalScore'] == 3]\n",
+    "df_undetermined_vus.to_excel(f'./undetermined_vus.xlsx', index=False)"
    ]
   },
   {
@@ -559,26 +546,6 @@
     "import seaborn as sns\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_undetermined_patho = df_undetermined[df_undetermined['FinalScore'] >= 4]\n",
-    "df_undetermined_patho.to_excel(f'./undetermined_patho.xlsx', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_undetermined_vus = df_undetermined[df_undetermined['FinalScore'] == 3]\n",
-    "df_undetermined_vus.to_excel(f'./undetermined_vus.xlsx', index=False)"
    ]
   },
   {
