--- a/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_latest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,15 +492,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_22280/3566224663.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/b_/1qjd6n853xbbctck9_20_nt40000gn/T/ipykernel_74525/1888342942.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '.' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  df.fillna('.', inplace=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "748\n",
+      "15605\n"
      ]
     }
    ],
@@ -508,23 +516,49 @@
     "df = pd.read_pickle(f'./mydata.final.pickle')\n",
     "df.replace({'\\u2161': 'II', '\\u2163': 'IV', '\\u2162': 'III'}, inplace=True, regex=True)\n",
     "df.fillna('.', inplace=True)\n",
-    "df.to_csv(f'./mydata.final.tsv', sep='\\t', index=False, encoding='shift-jis')\n",
+    "df.rename(columns={'gene_x': 'gene', 'ID_x': 'ID'}, inplace=True)\n",
     "df = anno_hgmd(df)\n",
-    "print(df.duplicated(subset=['sample', 'ID_x']).sum())\n",
-    "df.drop_duplicates(subset=['sample', 'ID_x'], inplace=True)\n",
+    "df = df.drop(columns=['gene_y', 'ID_y'])\n",
+    "print(df.duplicated(subset=['sample', 'ID']).sum())\n",
+    "df.drop_duplicates(subset=['sample', 'ID'], inplace=True)\n",
     "print(len(df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pysam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(f'./mydata.final.tsv', sep='\\t', index=False, encoding='shift-jis')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,6 +585,88 @@
     "df_undetermined_vus = df_undetermined[df_undetermined['FinalScore'] == 3]\n",
     "df_undetermined_vus.to_excel(f'./undetermined_vus.xlsx', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3892"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_identified)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "csq\n",
+       "missense_variant                                            1988\n",
+       "synonymous_variant                                           905\n",
+       "intron_variant                                               512\n",
+       "splice_region_variant&intron_variant                         201\n",
+       "stop_gained                                                   90\n",
+       "missense_variant&splice_region_variant                        71\n",
+       "splice_donor_variant&intron_variant                           39\n",
+       "non_coding_transcript_exon_variant                            25\n",
+       "splice_region_variant&synonymous_variant                      23\n",
+       "splice_acceptor_variant&intron_variant                        20\n",
+       "stop_gained&splice_region_variant                              7\n",
+       "start_lost                                                     6\n",
+       "stop_lost                                                      3\n",
+       "splice_region_variant                                          1\n",
+       "splice_region_variant&non_coding_transcript_exon_variant       1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
