--- a/ValidationData/mydata/analysis_mydata_variants_old.ipynb
+++ b/ValidationData/mydata/analysis_mydata_variants_old.ipynb
@@ -9,29 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_17384/1318617963.py:8: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO: Pandarallel will run on 8 workers.\n",
-      "INFO: Pandarallel will use Memory file system to transfer data between the main process and workers.\n"
+      "INFO: Pandarallel will run on 4 workers.\n",
+      "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n"
      ]
     }
    ],
@@ -60,7 +46,7 @@
     "    sys.path.append(os.path.join(Path().resolve(), '../../'))\n",
     "\n",
     "from libs import utils, preprocess, variantfilter, posparser, splaiparser\n",
-    "from libs import predeffect, acmgamp\n",
+    "from libs import predeffect\n",
     "from libs import anno_spliceai, anno_clinvar\n",
     "from libs.deco import print_filtering_count\n",
     "\n",
@@ -71,19 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "########   Import genocode DBs (exon DB and intron DB)   ########\n",
     "try:\n",
-    "    db_anno_gencode = '../../Resources/05_GENCODE_v43lift37/gencode.v43lift37.annotation.gtf.db'\n",
-    "    db_anno_intron = '../../Resources/05_GENCODE_v43lift37/gencode.v43lift37.annotation.intron.gtf.db'\n",
+    "    db_anno_gencode = '../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.gtf.db'\n",
+    "    db_anno_intron = '../../Resources/06_gffutilsdb/gencode.v43lift37.annotation.intron.gtf.db'\n",
     "    db = gffutils.FeatureDB(db_anno_gencode)\n",
     "    db_intron = gffutils.FeatureDB(db_anno_intron)\n",
     "except ValueError:\n",
-    "    db_anno_gencode = '/work/resources/DBs/gencode.v43lift37.annotation.gtf.db'\n",
-    "    db_anno_intron = '/work/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db'\n",
+    "    db_anno_gencode = '/resources/DBs/gencode.v43lift37.annotation.gtf.db'\n",
+    "    db_anno_intron = '/resources/DBs/gencode.v43lift37.annotation.intron.gtf.db'\n",
     "    db = gffutils.FeatureDB(db_anno_gencode)\n",
     "    db_intron = gffutils.FeatureDB(db_anno_intron)\n",
     "\n",
@@ -101,7 +87,6 @@
     "#4. CCRs (BED format)\n",
     "autoccr = '../../Resources/04_CCRs/ccrs.autosomes.v2.20180420.sort.bed.gz'\n",
     "xccr = '../../Resources/04_CCRs/ccrs.xchrom.v2.20180420.sort.bed.gz'\n",
-    "\n",
     "\n",
     "## Thresholds configuration\n",
     "thresholds_SpliceAI_parser: dict = {\n",
@@ -128,7 +113,7 @@
     "    return result\n",
     "\n",
     "## loading original file and setting output base path\n",
-    "mydata = './original.snpeff.state.disease.tsv'\n",
+    "mydata = './original.snpeff.state.disease.identifiedgene.tsv'\n",
     "# mydata = './original.snpeff.state.disease.filtered.tsv'\n",
     "results_splai = './results_spliceai_mydata.vcf'\n",
     "\n",
@@ -142,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,11 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('./original.snpeff.state.disease.filtered.splai.tsv', sep='\\t', index=False)"
+    "df.to_csv('./original.snpeff.state.disease.identifiedgene.filtered.splai.tsv', sep='\\t', index=False)"
    ]
   },
   {
