--- a/Resources/02_EstimatedLoFGenes/comparison.ipynb
+++ b/Resources/02_EstimatedLoFGenes/comparison.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,6 @@
     "am_path = 'AlphaMissense_gene_hg19.tsv.gz'\n",
     "genovo_path = 'GenovoLOEUF.txt.gz'\n",
     "gnocchi_path = 'EnhancerGnocchi.txt.gz'\n",
-    "\n",
     "\n",
     "# Load data\n",
     "ajhg = pd.read_csv(\n",
@@ -61,12 +60,73 @@
     "    usecols=['gene', 'enhancer_Gnocchi']\n",
     "    )\n",
     "\n",
-    "am = pd.read_csv(am_path, sep='\\t', compression='gzip', skiprows=3)"
+    "am = pd.read_csv(am_path, sep='\\t', compression='gzip', skiprows=3)\n",
+    "am['transcript'] = am['transcript_id'].str.split('.').str[0]\n",
+    "am['version'] = am['transcript_id'].str.split('.').str[1]\n",
+    "am.drop(columns=['transcript_id'], inplace=True)\n",
+    "am = am[['transcript', 'version', 'mean_am_pathogenicity']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Curation set\n",
+      "--- AJHG ---\n",
+      "   gene       RefSeq\n",
+      "0  AAAS  NM_015665.5\n",
+      "1  AARS  NM_001605.2\n",
+      "2  AASS  NM_005763.3\n",
+      "1043\n",
+      "\n",
+      "--- Gnomad ---\n",
+      "    gene       transcript  pLI  oe_lof_upper  cds_length\n",
+      "0  MED13  ENST00000397786  1.0         0.030        6522\n",
+      "1  NIPBL  ENST00000282516  1.0         0.032        8412\n",
+      "2   SMC3  ENST00000361804  1.0         0.037        3651\n",
+      "19658\n",
+      "\n",
+      "--- HI ---\n",
+      "      gene  HIscore\n",
+      "0     AGRN       30\n",
+      "1  B3GALT6       30\n",
+      "2     GNB1        1\n",
+      "1500\n",
+      "\n",
+      "--- Phaplo ---\n",
+      "      gene    pHaplo\n",
+      "0  CACNA1C  0.998982\n",
+      "1   ZNF462  1.000000\n",
+      "2     CHD8  0.991650\n",
+      "18641\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Curation set\n",
+    "print('Curation set')\n",
+    "print('--- AJHG ---')\n",
+    "print(ajhg.head(3))\n",
+    "print(ajhg['gene'].nunique())\n",
+    "print('\\n--- gnomAD ---')\n",
+    "print(gnomad.head(3))\n",
+    "print(gnomad['gene'].nunique())\n",
+    "print('\\n--- HI ---')\n",
+    "print(higene.head(3))\n",
+    "print(higene['gene'].nunique())\n",
+    "print('\\n--- Phaplo ---')\n",
+    "print(phaplo.head(3))\n",
+    "print(phaplo['gene'].nunique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +139,6 @@
       "0  ENST00000000233.5               0.742270\n",
       "1  ENST00000000412.3               0.378343\n",
       "2  ENST00000001008.4               0.422290\n",
-      "3  ENST00000001146.2               0.466606\n",
-      "4  ENST00000002125.4               0.351480\n",
       "18761\n",
       "\n",
       "--- Gnocchi ---\n",
@@ -88,8 +146,6 @@
       "0   NOC2L          1.509945\n",
       "1  SAMD11          1.579239\n",
       "2  RNF223          2.725941\n",
-      "3    HES4          4.830528\n",
-      "4    AGRN          5.938154\n",
       "15541\n",
       "\n",
       "--- Genovo ---\n",
@@ -97,8 +153,6 @@
       "0  ENST00000394484            1                0.000000\n",
       "1  ENST00000329516            3                0.039973\n",
       "2  ENST00000330331            5                0.071441\n",
-      "3  ENST00000329753            5                2.218175\n",
-      "4  ENST00000590297            1                3.662239\n",
       "57308\n"
      ]
     }
@@ -106,79 +160,14 @@
    "source": [
     "print('Validation set')\n",
     "print('--- AlphaMissense ---')\n",
-    "print(am.head())\n",
+    "print(am.head(3))\n",
     "print(am['transcript_id'].nunique())\n",
     "print('\\n--- Gnocchi ---')\n",
-    "print(gnocchi.head())\n",
+    "print(gnocchi.head(3))\n",
     "print(gnocchi['gene'].nunique())\n",
     "print('\\n--- Genovo ---')\n",
-    "print(genovo.head())\n",
-    "print(genovo['enstID'].nunique())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Curation set\n",
-      "--- AJHG ---\n",
-      "     gene       RefSeq\n",
-      "0    AAAS  NM_015665.5\n",
-      "1    AARS  NM_001605.2\n",
-      "2    AASS  NM_005763.3\n",
-      "3   ABCA1  NM_005502.3\n",
-      "4  ABCA12  NM_173076.2\n",
-      "1043\n",
-      "\n",
-      "--- Gnomad ---\n",
-      "    gene       transcript  pLI  oe_lof_upper  cds_length\n",
-      "0  MED13  ENST00000397786  1.0         0.030        6522\n",
-      "1  NIPBL  ENST00000282516  1.0         0.032        8412\n",
-      "2   SMC3  ENST00000361804  1.0         0.037        3651\n",
-      "3  CNOT1  ENST00000317147  1.0         0.038        7128\n",
-      "4    RLF  ENST00000372771  1.0         0.040        5742\n",
-      "19658\n",
-      "\n",
-      "--- HI ---\n",
-      "      gene  HIscore\n",
-      "0     AGRN       30\n",
-      "1  B3GALT6       30\n",
-      "2     GNB1        1\n",
-      "3      SKI        0\n",
-      "4     TP73        0\n",
-      "1500\n",
-      "\n",
-      "--- Phaplo ---\n",
-      "      gene    pHaplo\n",
-      "0  CACNA1C  0.998982\n",
-      "1   ZNF462  1.000000\n",
-      "2     CHD8  0.991650\n",
-      "3   GRIN2B  0.996809\n",
-      "4   ARID1A  0.998061\n",
-      "18641\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Curation set\n",
-    "print('Curation set')\n",
-    "print('--- AJHG ---')\n",
-    "print(ajhg.head())\n",
-    "print(ajhg['gene'].nunique())\n",
-    "print('\\n--- Gnomad ---')\n",
-    "print(gnomad.head())\n",
-    "print(gnomad['gene'].nunique())\n",
-    "print('\\n--- HI ---')\n",
-    "print(higene.head())\n",
-    "print(higene['gene'].nunique())\n",
-    "print('\\n--- Phaplo ---')\n",
-    "print(phaplo.head())\n",
-    "print(phaplo['gene'].nunique())\n"
+    "print(genovo.head(3))\n",
+    "print(genovo['enstID'].nunique())"
    ]
   },
   {
